# kitty-wars-yew-front

./: Cargo.toml  README.md  package.json  webpack.config.js
js/: index.js
js/actions/: bootstrap.js
js/contracts/: compiled.js  contract-names.js  contracts.js  events.js  setup.js  web3.js
rs/: app.rs  boundary.rs  game.rs  lib.rs  parsing.rs  utils.rs
static/: index.html
